tests/baselines/reference/superCallInsideClassDeclaration.errors.txt
tests/cases/compiler/superCallInsideClassDeclaration.ts(8,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== tests/cases/compiler/superCallInsideClassDeclaration.ts (1 errors) ====
    class A {
    }
    
    class C {
    }
    
    class B extends A {
        constructor() {
        ~~~~~~~~~~~~~~~
    
    
            class D extends C {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                constructor() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    super();
    ~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }